# calibre_libgen_store

./: .gitignore  LICENSE  README.md  download-calibre-src.sh  pyproject.toml  scripts.py
calibre_libgen_store/: libgen.py  log.py  store.py  util.py
scripts/: create-release.sh  download-calibre-src.sh
tests/: test_libgen.py
tests/test_libgen/: details-page.html  download-page.html  search-result-row.html
