[tool.poetry]
name = "calibre-libgen-store"
version = "0.1.0"
description = ""
authors = ["Olaf Apelseth Liadal"]
readme = "README.md"
packages = [{include = "calibre_libgen_store"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
