[tool.poetry]
name = "calibre-libgen-store"
version = "0.1.0"
description = ""
authors = ["Olaf Apelseth Liadal"]
readme = "README.md"
packages = [{include = "calibre_libgen_store"}]

[tool.poetry.dependencies]
python = "^3.10"
requests-html = "^0.10.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
